Navigation bar added

--- a/index.html
+++ b/index.html
@@ -11,10 +11,20 @@
 
 <body>
   <nav>
-    <span>Start Bootstrap</span>
-    <span>Download</span>
-    <span>Features</span>
-    <span>Contact</span>
+    <ul>
+      <li class="left-hand">
+        <a href="#">Start Bootstrap</a>
+      </li>
+      <li class="right-hand">
+        <a href="#">Download</a>
+      </li>
+      <li class="right-hand">
+        <a href="#">Features</a>
+      </li>
+      <li class="right-hand">
+        <a href="#">Contact</a>
+      </li>
+    </ul>
   </nav>
   <section class="linear-gradient-background">
     <div class="container">
