szív icon baszakodás

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <section class="yellow-background">
     <div class="container">
       <div class="col-100">
-        <h1>We (Love icon) new friends!</h1>
+        <h1 class="sziv">We (szív icon) new friends!</h1>
         <a href="https://twitter.com/?lang=en">Twitter icon</a>
         <a href="https://www.facebook.com">Facebook icon</a>
         <a href="https://plus.google.com/discover">Google Plus icon</a>
