új css file a gecis szívnek

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css" type="text/css">
+  <link rel="stylesheet" href="css/sziv.css">
   <title>sitebuild</title>
 </head>
 
@@ -83,7 +84,8 @@
   <section class="yellow-background">
     <div class="container">
       <div class="col-100">
-        <h1 class="sziv">We (szív icon) new friends!</h1>
+        <h1>We
+          <span class="sziv"></span> new friends!</h1>
         <a href="https://twitter.com/?lang=en">Twitter icon</a>
         <a href="https://www.facebook.com">Facebook icon</a>
         <a href="https://plus.google.com/discover">Google Plus icon</a>
