--- a/index.html
+++ b/index.html
@@ -6,100 +6,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css" type="text/css">
-  <title>sitebuild</title>
+  <title>Sitebuild</title>
 </head>
 
 <body>
   <div class="main-content">
-    <nav>
-      <span class="nav-left">Start Bootstrap</span>
-      <span class="nav-right">Download</span>
-      <span class="nav-right">Features</span>
-      <span class="nav-right">Contact</span>
-    </nav>
-    <section class="section1">
-      <div class="container">
+    <div class="top-content">
+      <nav class="navbar">
+        <a href="#" class="nav-left">Start Bootstrap</a>
+
+        <a href="#" class="navbar-right">DOWNLOAD</a>
+        <a href="#" class="navbar-right">FEATURES</a>
+        <a href="#" class="navbar-right">CONTACT</a>
+
+      </nav>
+      <section class="section1">
         <div class="col-50">
           <p class="section1-text">New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</p>
-          <button class="section1-button">START NOW FOR FREE</button>
+          <button class="section1-button">START NOW FOR FREE!</button>
         </div>
         <div class="col-50">
           <img class="section1-img" src="img/demo-screen-1.png" alt="picture of a phone screen">
         </div>
-      </div>
-    </section>
-
-    <section class="yellow-background">
-      <div class="container">
-        <div class="col-100">
-          <h2>Discover what all the buzz is about!</h2>
-          <p>Our app is available on any mobile device! Download now to get started!</p>
-          <div class="col-50">
-            <a href="https://play.google.com/store">
-              <img src="img/google-play-badge.svg" alt="Google play link">
-            </a>
-          </div>
-          <div class="col-50">
-            <a href="https://www.appstore.com/">
-              <img src="img/app-store-badge.svg" alt="Apple store link">
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="white-background">
-      <div class="container">
-        <div class="col-33">
-          <img src="img/demo-screen-1.png" alt="picture of a phone screen">
-        </div>
-        <div class="col-33">
-          <p>(Phone icon css-bol jon valahogyan elvileg.</p>
-          <h3>Device Mockups</h3>
-          <p>Ready to use HTML/CSS device mockups, no Photoshop required!</p>
-          <p>(Ajándék csomag icon)</p>
-          <h3>Free to Use</h3>
-          <p>As always, this theme is free to download and use for any purpose!</p>
-        </div>
-        <div class="col-33">
-          <p>(Camera icon css-bol jon valahogyan elvileg.</p>
-          <h3>Flexible Use</h3>
-          <p>Put an image, video, animation, or anything else in the screen!</p>
-          <p>(Lakat icon)</p>
-          <h3>Open Source</h3>
-          <p>Since this theme is MIT licensed, you can use it commercially!</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="pic-background">
-      <div class="container">
-        <div class="col-33">
-          <h1>Stop waiting. Start building.</h1>
-          <button>L E T ' S G E T S TA RT E D !</button>
-        </div>
-      </div>
-    </section>
-
-    <section class="yellow-background">
-      <div class="container">
-        <div class="col-100">
-          <h1>We (Love icon) new friends!</h1>
-          <a href="https://twitter.com/?lang=en">Twitter icon</a>
-          <a href="https://www.facebook.com">Facebook icon</a>
-          <a href="https://plus.google.com/discover">Google Plus icon</a>
-        </div>
-      </div>
-    </section>
-
-    <footer class="container col-100">
-      <p>© Your Website 2018. All Rights Reserved.</p>
-      <a href="pages/privacy.html" target="_blank">Privacy</a>
-      <a href="pages/terms.html" target="_blank">Terms</a>
-      <a href="pages/faq.html" target="_blank">FAQ</a>
-    </footer>
-  </div>
-  <nav>
+      </section>
+    </div>
 </body>
 
 </html>
