htomi kb kesz verzio

--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
 <body>
   <div class="main-content">
     <div class="top-content">
-      <nav class="navbar">
-        <a href="#" class="nav-left">Start Bootstrap</a>
+      <ul class="navbar">
+        <li>
+          <a href="#" class="nav-left">Start Bootstrap</a>
+        </li>
+        <li>
+          <a href="#" class="navbar-right">DOWNLOAD</a>
+        </li>
+        <li>
+          <a href="#" class="navbar-right">FEATURES</a>
+        </li>
+        <li>
+          <a href="#" class="navbar-right">CONTACT</a>
+        </li>
 
-        <a href="#" class="navbar-right">DOWNLOAD</a>
-        <a href="#" class="navbar-right">FEATURES</a>
-        <a href="#" class="navbar-right">CONTACT</a>
-
-      </nav>
+      </ul>
       <section class="section1">
         <div class="col-50">
           <p class="section1-text">New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</p>
