Navbar by Tamas removed.

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <body>
   <nav>
     <ul>
-      <li class="left-hand">
+      <li>
         <a href="#">Start Bootstrap</a>
       </li>
-      <li class="right-hand">
+      <li>
         <a href="#">Download</a>
       </li>
-      <li class="right-hand">
+      <li>
         <a href="#">Features</a>
       </li>
-      <li class="right-hand">
+      <li>
         <a href="#">Contact</a>
       </li>
     </ul>
@@ -38,7 +38,7 @@
     </div>
   </section>
 
-  <section class="yellow-background">
+  <section class="yelow-background">
     <div class="container">
       <div class="col-100">
         <h2>Discover what all the buzz is about!</h2>
