Section 2 and Footer done.

--- a/index.html
+++ b/index.html
@@ -39,16 +39,14 @@
   </section>
 
   <section class="yelow-background">
-    <div class="container">
+    <div class="container yelow">
       <div class="col-100">
-        <h2>Discover what all the buzz is about!</h2>
+        <p>Discover what all the buzz is about!</p>
         <p>Our app is available on any mobile device! Download now to get started!</p>
-        <div class="col-50">
+        <div class="">
           <a href="https://play.google.com/store">
             <img src="img/google-play-badge.svg" alt="Google play link">
           </a>
-        </div>
-        <div class="col-50">
           <a href="https://www.appstore.com/">
             <img src="img/app-store-badge.svg" alt="Apple store link">
           </a>
@@ -101,11 +99,13 @@
     </div>
   </section>
 
-  <footer class="container col-100">
-    <p>© Your Website 2018. All Rights Reserved.</p>
-    <a href="pages/privacy.html" target="_blank">Privacy</a>
-    <a href="pages/terms.html" target="_blank">Terms</a>
-    <a href="pages/faq.html" target="_blank">FAQ</a>
+  <footer>
+    <div class="container col-100">
+      <p>© Your Website 2018. All Rights Reserved.</p>
+      <a href="pages/privacy.html" target="_blank">Privacy</a>
+      <a href="pages/terms.html" target="_blank">Terms</a>
+      <a href="pages/faq.html" target="_blank">FAQ</a>
+    </div>
   </footer>
 </body>
 
