a sárga fos kész assszem

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css" type="text/css">
-  <link rel="stylesheet" href="css/sziv.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>sitebuild</title>
 </head>
@@ -85,11 +84,11 @@
   <section class="yellow-background">
     <div class="container">
       <div class="col-100">
-        <h1>We
+        <h1 class="szivecske">We
           <span class="sziv"></span> new friends!</h1>
-        <a href="https://twitter.com/?lang=en">Twitter icon</a>
-        <a href="https://www.facebook.com">Facebook icon</a>
-        <a href="https://plus.google.com/discover">Google Plus icon</a>
+        <a class="fa fa-twitter" href="https://twitter.com/?lang=en" target="_blank"></a>
+        <a class="fa fa-facebook" href="https://www.facebook.com" target="_blank"></a>
+        <a class="fa fa-google-plus" href="https://plus.google.com/discover" target="_blank"></a>
       </div>
     </div>
   </section>
