asszem minden kész

--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
   <section class="pic-background">
     <div class="container">
       <div class="col-33">
-        <h1>Stop waiting. Start building.</h1>
-        <button>L E T ' S G E T S TA RT E D !</button>
+        <h1 class="stopwaiting">Stop waiting.
+          <br> Start building.</h1>
+        <button class="letbutton">LET'S GET STARTED!</button>
       </div>
     </div>
   </section>
