--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
   <div class="top-content">
     <ul class="navbar">
       <li>
-        <a href="#" class="nav-left">Start Bootstrap</a>
+        <a href="#section1" class="nav-left">Start Bootstrap</a>
       </li>
       <li>
-        <a href="#" class="navbar-right">DOWNLOAD</a>
+        <a href="#section4" class="navbar-right">CONTACT</a>
       </li>
       <li>
-        <a href="#" class="navbar-right">FEATURES</a>
+        <a href="#section3" class="navbar-right">FEATURES</a>
       </li>
       <li>
-        <a href="#" class="navbar-right">CONTACT</a>
+        <a href="#section2" class="navbar-right">DOWNLOAD</a>
       </li>
     </ul>
-    <section class="section1">
+    <section id="section1" class="section1">
       <div class="col-50">
         <p class="section1-text">New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</p>
         <button class="section1-button">START NOW FOR FREE!</button>
@@ -38,7 +38,7 @@
     </section>
   </div>
 
-  <section class="yelow-background">
+  <section id="section2" class="yelow-background">
     <div class="container yelow">
       <div class="col-100">
         <p>Discover what all the buzz is about!</p>
@@ -55,7 +55,7 @@
     </div>
   </section>
 
-  <section class="white-background">
+  <section id="section3" class="white-background">
     <div>
       <p class="sb1">Unlimited Features, Unlimited Fun</p>
       <p class="sb2">Check out what you can do with this app theme!</p>
@@ -108,7 +108,7 @@
     </div>
   </section>
 
-  <section class="yellow-background">
+  <section id="section4" class="yellow-background">
     <div class="container">
       <div class="col-100">
         <h1 class="szivecske">We
